welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:2: error: ')' expected but ',' found.
  if (aSmile==true and bSmile=true , aSmile==false and bSmile==false){
                                   ^monkeyTrouble:5: error: illegal start of simple expression
} 
^